Fix: Page scrolling to white space

--- a/src/assets/scss/_app-body.scss
+++ b/src/assets/scss/_app-body.scss
@@ -1,5 +1,4 @@
 html, body {
-  height: 100vh;
   overflow-x: hidden;
 }
 
